[package]
name = "melior-macro"
description = "Internal macros for Melior"
version = "0.10.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/raviqqe/melior"
documentation = "https://raviqqe.github.io/melior/melior/"
readme = "../README.md"
keywords = ["mlir", "llvm"]

[lib]
proc-macro = true

[features]
default = ["tblgen/llvm17-0", "mlir-sys/default"]
llvm17-0 = ["tblgen/llvm17-0", "mlir-sys/default"]
llvm-trunk = ["tblgen/llvm-trunk", "mlir-sys/llvm-trunk"]

[dependencies]
comrak = "0.21.0"
convert_case = "0.6.0"
once_cell = "1.19.0"
proc-macro2 = "1"
quote = "1"
regex = "1.10.3"
syn = { version = "2", features = ["full"] }
tblgen = { version = "0.3.0", default-features = false }
unindent = "0.2.3"

[dev-dependencies]
melior = { path = "../melior", features = ["ods-dialects"] }
mlir-sys = { version = "0.2", default_features = false }
pretty_assertions = "1.4.0"
