[package]
name = "melior"
description = "The rustic MLIR bindings in Rust"
version = "0.16.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/raviqqe/melior"
documentation = "https://raviqqe.github.io/melior/melior/"
keywords = ["mlir", "llvm"]

[features]
default = ["melior-macro/default", "mlir-sys/default"]
llvm17-0 = ["melior-macro/llvm17-0", "mlir-sys/llvm17-0"]
llvm-trunk = ["melior-macro/llvm-trunk", "mlir-sys/llvm-trunk"]
ods-dialects = []

[dependencies]
dashmap = "5.5.3"
melior-macro = { version = "0.10", path = "../macro", default_features = false }
mlir-sys = { version = "0.2", default_features = false }
once_cell = "1"

[dev-dependencies]
indoc = "2.0.4"
insta = "1.35.1"
pretty_assertions = "1.4.0"
